--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "react-scripts": "3.4.1",
     "react-slider": "^1.0.8",
     "redux": "^4.0.5",
+    "serve": "^11.3.2",
     "styled-components": "^5.1.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
