--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "node": "12.13.0",
     "npm": "6.14.6"
   },
+  "homepage": "http://gamezordd.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -36,7 +37,7 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "serve -s start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -59,6 +60,7 @@
   "devDependencies": {
     "@types/react-slider": "^1.0.0",
     "css-loader": "^4.0.0",
+    "gh-pages": "^3.1.0",
     "style-loader": "^1.2.1"
   }
 }
