--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "12.13.0",
     "npm": "6.14.6"
   },
-  "homepage": "http://gamezordd.github.io/",
+  "homepage": "http://gamezordd.github.io/SMFSReact_app",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -40,7 +40,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
