--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/recompose": "^0.30.7",
     "@types/styled-components": "^5.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
@@ -31,6 +32,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-slider": "^1.0.8",
+    "recompose": "^0.30.0",
     "redux": "^4.0.5",
     "serve": "^11.3.2",
     "styled-components": "^5.1.1",
